source/includes/account_asset/v1/_changelog.md
# t(:changelog)

## 2023-06-06
### REST API
- [t(:withdraw_info)](#t-withdraw_info) [t(:changelog_update)]
  - t(:restapi_update_20230606)

## 2023-02-14
### REST API
- [t(:withdraw_info)](#t-withdraw_info) [t(:changelog_update)]
  - t(:restapi_update_20230214)

## 2022-11-24
### REST API
- [t(:withdraw_info)](#t-withdraw_info) [t(:changelog_update)]
  - t(:restapi_update_20221124_2)

## 2022-09-14
### REST API
- [t(:createuniversaltransfer)](#t-createuniversaltransfer) [t(:changelog_update)]
  t(:restapi_update_20220914)

## 2022-06-15
### REST API
- [t(:querysubaccountlist)](#t-querysubaccountlist) [t(:changelog_update)]
- [t(:enableuniversaltransfer)](#t-enableuniversaltransfer) [t(:changelog_new)]
- [t(:createuniversaltransfer)](#t-createuniversaltransfer) [t(:changelog_new)]
- [t(:queryUniverseTransferList)](#t-queryuniversetransferlist) [t(:changelog_new)]
  <br>
  t(:restapi_update_20220610_2)
  
## 2022-05-19
### REST API
- [t(:withdraw_and_deposit)](#t-withdraw_and_deposit) [t(:changelog_new)]
  t(:restapi_update_20220519)

## 2021-08-26
### REST API
- t(:restapi_update_20210826)
